채팅 UI 업데이트

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -153,7 +153,7 @@
             <div class="flex-grow p-4 overflow-y-auto bg-white" id="chat-messages"
                 data-chatbot-logo="{{ url_for('static', filename='images/trandNavi-logo.png') }}">
                 <!-- 챗봇 메시지 예시 블럭-->
-                <!-- <div class="flex items-center mb-4">
+                <!-- <div class="flex items-start mb-4">
                     <img src="{{ url_for('static', filename='images/trandNavi-logo.png') }}" alt="Chatbot Logo"
                         class="mr-2 w-12 h-12 rounded-full">
                     <div class="bg-gray-100 p-4 rounded-lg">
