--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,10 @@ li {
     border: 0 solid #e3e3e3;
     box-sizing: border-box;
 }
+a {
+    color: blue;
+    text-decoration: underline;
+}
 
 /* 사이드바 */
 .chat-sidebar {
