--- a/templates/chat.html
+++ b/templates/chat.html
@@ -185,7 +185,7 @@
                                         <div
                                             class="flex items-center w-full max-w-3xl p-2 rounded-full bg-gray-100 shadow-sm mx-auto">
                                             <!-- 첨부 파일 버튼 -->
-                                            <button
+                                            <button id="upload-btn" type="button"
                                                 class="flex items-center justify-center h-8 w-8 rounded-full text-gray-500 hover:text-black focus:outline-none">
                                                 <!-- 첨부 파일 아이콘 -->
                                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -194,8 +194,9 @@
                                                         d="M9 7C9 4.23858 11.2386 2 14 2C16.7614 2 19 4.23858 19 7V15C19 18.866 15.866 22 12 22C8.13401 22 5 18.866 5 15V9C5 8.44772 5.44772 8 6 8C6.55228 8 7 8.44772 7 9V15C7 17.7614 9.23858 20 12 20C14.7614 20 17 17.7614 17 15V7C17 5.34315 15.6569 4 14 4C12.3431 4 11 5.34315 11 7V15C11 15.5523 11.4477 16 12 16C12.5523 16 13 15.5523 13 15V9C13 8.44772 13.4477 8 14 8C14.5523 8 15 8.44772 15 9V15C15 16.6569 13.6569 18 12 18C10.3431 18 9 16.6569 9 15V7Z"
                                                         fill="currentColor"></path>
                                                 </svg>
+                                                <!-- 첨부 파일 아이콘 -->
                                             </button>
-
+                                            <input type="file" id="image-input" accept="image/*" style="display: none;">
                                             <!-- 메시지 입력창 -->
                                             <input type="text" id="user-input" placeholder="메시지 TrandNV"
                                                 class="flex-grow bg-transparent border-0 px-4 py-2 text-gray-700 focus:outline-none" />
