--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -44,7 +44,7 @@
         <div class="container mx-auto flex items-center px-4 py-4">
             <!-- Logo and title as a clickable link -->
             <a href="{{ url_for('main.home') }}" class="flex items-center">
-                <img src="{{ url_for('static', filename='images/trandNavi-logo.png') }}" alt="Logo"
+                <img src="{{ url_for('static', filename='images/trendNavi-logo.png') }}" alt="Logo"
                     class="mr-2 w-12 h-12 rounded-lg">
                 <h1 class="text-xl font-semibold">Trand NV</h1>
             </a>
@@ -55,17 +55,17 @@
     <div class="wrapper mx-auto mt-20">
         <h2>로그인</h2>
         <div class="login">
-            <input type="email" placeholder="계정이름"><i class="fas fa-user usericon"></i>
+            <input type="email" id="email" placeholder="계정이름"><i class="fas fa-user usericon"></i>
         </div>
         <div class="password">
-            <input type="password" placeholder="비밀번호"><i class="fas fa-lock lockicon"></i>
+            <input type="password" id="password" placeholder="비밀번호"><i class="fas fa-lock lockicon"></i>
         </div>
         <div class="check">
-            <input type="checkbox"><span>계정 기억하기</span>
+            <input type="checkbox" id="rememberMe"><span>계정 기억하기</span>
             <a href="#">비밀번호를 잊어버리셨나요?</a>
         </div>
         <div class="loginbtn">
-            <button>로그인</button>
+            <button onclick="click_login()">로그인</button>
         </div>
         <div class="register">
             <span>계정이 없으신가요?</span>
@@ -74,7 +74,7 @@
     </div>
 
     <!-- JavaScript Libraries -->
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/c6ff0ca5bd.js" crossorigin="anonymous"></script>
