화면 연동완료

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -173,7 +173,7 @@
                         <div id="profileMenu"
                             class="hidden absolute right-0 top-full py-2 mt-1 w-72 bg-gray-700 text-white rounded-lg shadow-lg z-50">
                             <div class="flex items-center py-2 pl-5 pr-4">
-                                <p class="text-sm font-medium">trandNavi@gmail.com</p>
+                                <p class="text-sm font-medium" id="user_name"></p>
                             </div>
                             <div role="separator" aria-orientation="horizontal" class="mx-5 my-1 h-px bg-gray-600">
                             </div>
@@ -610,8 +610,17 @@
         </div>
     </div>
     <!-- Custom JS -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            // auth.js에 정의된 checkLoginStatus 호출
+            if (typeof checkLoginStatus === "function") {
+                checkLoginStatus();
+            } else {
+                console.error("checkLoginStatus 함수가 정의되지 않았습니다.");
+            }
+        });
+    </script>
     <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
     <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script>
