--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -173,7 +173,7 @@
                         <div id="profileMenu"
                             class="hidden absolute right-0 top-full py-2 mt-1 w-72 bg-gray-700 text-white rounded-lg shadow-lg z-50">
                             <div class="flex items-center py-2 pl-5 pr-4">
-                                <p class="text-sm font-medium">trandNavi@gmail.com</p>
+                                <p class="text-sm font-medium" id="user_name"></p>
                             </div>
                             <div role="separator" aria-orientation="horizontal" class="mx-5 my-1 h-px bg-gray-600">
                             </div>
