--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -33,7 +33,7 @@
         <div class="container mx-auto flex items-center px-4 py-4">
             <!-- Logo and title as a clickable link -->
             <a href="{{ url_for('main.home') }}" class="flex items-center">
-                <img src="{{ url_for('static', filename='images/trandNavi-logo.png') }}" alt="Logo"
+                <img src="{{ url_for('static', filename='images/trendNavi-logo.png') }}" alt="Logo"
                     class="mr-2 w-12 h-12 rounded-lg">
                 <h1 class="text-xl font-semibold">Trend NV</h1>
             </a>
