--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -292,7 +292,7 @@
                                                 class="flex-grow bg-transparent border-0 px-4 py-2 text-gray-700 focus:outline-none" />
 
                                             <!-- 전송 버튼 -->
-                                            <button
+                                            <button id="send-button"
                                                 class="flex items-center justify-center h-8 w-8 rounded-full bg-gray-200 text-gray-500 hover:bg-gray-300 hover:text-black focus:outline-none">
                                                 <!-- 전송 아이콘 -->
                                                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
