--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -46,7 +46,7 @@
             <a href="{{ url_for('main.home') }}" class="flex items-center">
                 <img src="{{ url_for('static', filename='images/trendNavi-logo.png') }}" alt="Logo"
                     class="mr-2 w-12 h-12 rounded-lg">
-                <h1 class="text-xl font-semibold">Trand NV</h1>
+                <h1 class="text-xl font-semibold">Trend NV</h1>
             </a>
         </div>
     </header>
