--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -40,7 +40,7 @@
                         </svg>
                     </button>
                     <!-- 새 채팅 버튼 -->
-                    <button aria-label="새 채팅" data-testid="create-new-chat-button"
+                    <button id="create-room-button" aria-label="새 채팅" data-testid="create-new-chat-button"
                         class="h-10 rounded-lg px-2 hover:bg-gray-600"><svg width="24" height="24" viewBox="0 0 24 24"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg" class="icon-xl-heavy">
                             <path
