--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -26,7 +26,7 @@
     <!-- 화면 전체 -->
     <div class="flex h-full">
         <!-- Left Sidebar -->
-        <div id="sidebar" class="w-1/4 bg-gray-800 text-white p-4 relative">
+        <div id="sidebar" class="w-1/4 bg-gray-800 text-white p-4 relative overflow-y-auto h-screen">
             <nav aria-label="채팅기록" class="flex flex-col h-full">
                 <!-- New Chat and Close Sidebar buttons at the top -->
                 <div class="flex justify-between mb-6 mt-1">
@@ -54,60 +54,9 @@
                     <!-- Chat history list here -->
                     <div class="space-y-2">
                         <ol>
-                            <li class="relative" data-testid="history-itme-0">
-                                <div class="no-draggable group relative rounded-lg active:opactiy-90 hover:bg-gray-600">
-                                    <a class="flex items-center gap-2 p-2 text-white" data-discover="true" href="#">
-                                        <div class="relative grow overflow-hidden whitespace-nowrap" dir="auto">
-                                            나는 테스트다.
-                                            <div
-                                                class="absolute bottom-0 top-0 to-transparent ltr:right-0 ltr:bg-gradient-to-l rtl:left-0 rtl:bg-gradient-to-r w-10 from-60%">
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <div
-                                        class="flex absolute top-0 bottom-0 right-0 items-center gap-1.5 pr-2 ltr:right-0 rtl:left-0 flex">
-                                        <span class data-state="closed">
-                                            <button
-                                                class="flex items-center justify-center transition hover:text-gray-400 radix-state-open:text-gray-500"
-                                                data-testid="history-item-0-options" type="button" id="radix-:r5l:"
-                                                aria-haspopup="menu" aria-expanded="false" data-state="closed"><svg
-                                                    width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                                    xmlns="http://www.w3.org/2000/svg" class="icon-md">
-                                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                                        d="M3 12C3 10.8954 3.89543 10 5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12ZM17 12C17 10.8954 17.8954 10 19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12Z"
-                                                        fill="currentColor"></path>
-                                                </svg></button>
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="relative" data-testid="history-itme-1">
-                                <div class="no-draggable group relative rounded-lg active:opactiy-90 hover:bg-gray-600">
-                                    <a class="flex items-center gap-2 p-2 text-white" data-discover="true" href="#">
-                                        <div class="relative grow overflow-hidden whitespace-nowrap" dir="auto">
-                                            가나다라마바사 아자차카타파하 기니디리미비시.
-                                            <div
-                                                class="absolute bottom-0 top-0 to-transparent ltr:right-0 ltr:bg-gradient-to-l rtl:left-0 rtl:bg-gradient-to-r w-10 from-60%">
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <div
-                                        class="flex absolute top-0 bottom-0 right-0 items-center gap-1.5 pr-2 ltr:right-0 rtl:left-0 flex">
-                                        <span class data-state="closed">
-                                            <button
-                                                class="flex items-center justify-center transition hover:text-gray-400 radix-state-open:text-gray-500"
-                                                data-testid="history-item-1-options" type="button" id="radix-:r5l:"
-                                                aria-haspopup="menu" aria-expanded="false" data-state="closed"><svg
-                                                    width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                                    xmlns="http://www.w3.org/2000/svg" class="icon-md">
-                                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                                        d="M3 12C3 10.8954 3.89543 10 5 10C6.10457 10 7 10.8954 7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12ZM10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12ZM17 12C17 10.8954 17.8954 10 19 10C20.1046 10 21 10.8954 21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12Z"
-                                                        fill="currentColor"></path>
-                                                </svg></button>
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
+                            <div id="chat-rooms">
+                                <!-- 채팅방 생성구역 -->
+                            </div>
                         </ol>
                     </div>
                     <div class="flex justify-end mt-4">
