start에서 main/id 넘어가는것만 수정하면됨

--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -135,7 +135,7 @@
                                 fill="currentColor"></path>
                         </svg>
                     </button>
-                    <a href="{{ url_for('main.main') }}" class="flex items-center"
+                    <a href="{{ url_for('main.start') }}" class="flex items-center"
                         style="text-decoration: none; color:white">
                         <img src="{{ url_for('static', filename='images/trendNavi-logo.png') }}" alt="Chatbot Logo"
                             class="mr-2 w-12 h-12 rounded-lg">
@@ -297,7 +297,6 @@
     <script src="{{ url_for('static', filename='js/auth.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     <script src="{{ url_for('static', filename='js/cart.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
 </body>
 
 </html>
