--- a/app/templates/chat_room.html
+++ b/app/templates/chat_room.html
@@ -83,7 +83,7 @@
                                 fill="currentColor"></path>
                         </svg>
                     </button>
-                    <a href="{{ url_for('main.main') }}" class="flex items-center"
+                    <a href="{{ url_for('main.start') }}" class="flex items-center"
                         style="text-decoration: none; color:white">
                         <img src="{{ url_for('static', filename='images/trendNavi-logo.png') }}" alt="Chatbot Logo"
                             class="mr-2 w-12 h-12 rounded-lg">
@@ -185,14 +185,14 @@
                 <div class="flex items-start mb-4">
                     <img src="{{ chatBotLogoUrl }}" alt="Chatbot-Logo" class="mr-2 w-12 h-12 rounded-full">
                     <div class="bg-gray-100 p-4 rounded-lg bot-message-content">
-                        {{ message.content }}
+                        {{ message.content|safe }}
                     </div>
                 </div>
                 {% else %}
                 <!-- 사용자의 메시지 -->
                 <div class="flex justify-end mb-4">
                     <div class="bg-blue-500 text-white p-4 rounded-lg">
-                        {{ message.content }}
+                        {{ message.content|safe}}
                     </div>
                 </div>
                 {% endif %}
