--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -107,7 +107,7 @@
                                 fill="currentColor"></path>
                         </svg>
                     </button>
-                    <a href="{{ url_for('main.main') }}" class="flex items-center"
+                    <a href="{{ url_for('main.start') }}" class="flex items-center"
                         style="text-decoration: none; color:white">
                         <img src="{{ url_for('static', filename='images/trendNavi-logo.png') }}" alt="Chatbot Logo"
                             class="mr-2 w-12 h-12 rounded-lg">
